--- a/TrangCaNhan.css
+++ b/TrangCaNhan.css
@@ -7,42 +7,24 @@ html {
   margin: 0px;
   padding: 0px;
 }
-
 .body__container {
   position: relative;
-  display: flex;
-}
-
-.container--style {
-  border: 1px solid gray;
-  padding: 10px;
-}
-
-.body__container--left {
-  width: 20%;
-  margin-right: 20px;
-}
-
-.body__container--right {
   width: 80%;
   margin: auto;
+  margin-bottom: 150px;
 }
-
-h1 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-}
-
+h1,
 h2 {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
 }
-
 p {
   font-family: "Roboto", sans-serif;
 }
-
-.right__item--1 {
+.body__icon--edit {
+  margin-right: 5px;
+}
+.body__item--1 {
   width: 90%;
   background: black;
   border-radius: 5px;
@@ -50,243 +32,146 @@ p {
   margin: auto;
   margin-bottom: 50px;
 }
-
-.right__item--1 img {
+.body__item--1 img {
   position: absolute;
   top: 85%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-.right__item--2 {
+.body__item--2 {
   position: relative;
   margin-top: 24px;
   text-align: center;
 }
-
-.right__item--3,
-.left__item--ava img {
+.body__item--3 {
   text-align: center;
 }
-
-.item__image {
+.function__container {
   display: flex;
   justify-content: space-around;
 }
-
-.item__image div {
+.function__container div,
+.body__cursor {
   cursor: pointer;
 }
-
-.item__image img,
-.left__item--name h2 {
-  margin-bottom: 10px;
+.fa-2x {
+  margin-bottom: 15px;
 }
-
-.left__item--1 {
-  display: flex;
-}
-
-.left__item--name {
-  width: 70%;
-}
-
-.left__item--name p {
-  cursor: pointer;
-}
-
-.left__item--2 .icon {
-  margin-top: 5px;
-  margin-left: 10px;
-  width: 30px;
-}
-
-div.left__item--2 :hover {
-  background: black;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
 @media only screen and (max-width: 600px) {
   .body__container {
     top: 50px;
-    margin-bottom: 70px;
   }
-
-  .body__container--left {
-    display: none;
-  }
-
   h1 {
     font-size: 20px;
+    margin-bottom: 16px;
   }
-
   h2 {
     font-size: 18px;
     margin-bottom: 16px;
   }
-
   p {
     font-size: 14px;
     margin-bottom: 16px;
   }
-
-  .right__item--1 {
+  .body__item--1 {
     height: 70px;
   }
-
-  .right__item--1 img {
+  .body__item--1 img {
     height: 90px;
   }
-
-  .item__image img {
-    height: 40px;
+  .body__container > h2 {
+    margin-left: 20px;
   }
 }
-
 @media only screen and (min-width: 600px) {
   .body__container {
     top: 70px;
-    margin-bottom: 110px;
   }
-
-  .body__container--left {
-    display: none;
-  }
-
   h1 {
     font-size: 22px;
+    margin-bottom: 18px;
   }
-
   h2 {
     font-size: 20px;
     margin-bottom: 18px;
   }
-
   p {
     font-size: 16px;
     margin-bottom: 18px;
   }
-
-  .right__item--1 {
+  .body__item--1 {
     height: 80px;
   }
-
-  .right__item--1 img {
+  .body__item--1 img {
     height: 95px;
   }
-
-  .item__image img {
-    height: 45px;
+  .body__container > h2 {
+    margin-left: 25px;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .body__container {
     top: 80px;
-    margin-bottom: 120px;
   }
-
-  .body__container--left {
-    display: none;
-  }
-
   h1 {
     font-size: 22px;
+    margin-bottom: 18px;
   }
-
   h2 {
     font-size: 20px;
     margin-bottom: 18px;
   }
-
   p {
     font-size: 16px;
     margin-bottom: 18px;
   }
-
-  .right__item--1 {
+  .body__item--1 {
     height: 85px;
   }
-
-  .right__item--1 img {
+  .body__item--1 img {
     height: 100px;
   }
-
-  .item__image img {
-    height: 50px;
+  .body__container > h2 {
+    margin-left: 30px;
   }
 }
-
 @media only screen and (min-width: 992px) {
   .body__container {
     top: 100px;
-    margin: 0px 50px 145px 50px;
   }
-
-  .body__container--left {
-    display: block;
-  }
-
   h1 {
     font-size: 20px;
+    margin-bottom: 24px;
   }
-
   h2 {
     font-size: 18px;
     margin-bottom: 24px;
   }
-
   p {
     font-size: 12px;
     margin-bottom: 16px;
   }
-
-  .left__item--ava {
-    width: 30%;
-  }
-
-  .left__item--ava img {
-    height: 40px;
-    margin: auto;
-    margin-top: 22px;
-    display: block;
+  .body__container > h2 {
+    margin-left: 40px;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .body__container {
     top: 110px;
-    margin: 0px 50px 160px 50px;
   }
-
-  .body__container--left {
-    display: block;
-  }
-
   h1 {
     font-size: 28px;
+    margin-bottom: 24px;
   }
-
   h2 {
     font-size: 24px;
     margin-bottom: 24px;
   }
-
   p {
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 16px;
   }
-
-  .left__item--ava {
-    width: 40%;
-  }
-
-  .left__item--ava img {
-    height: 50px;
-    margin: auto;
-    margin-top: 22px;
-    display: block;
+  .body__container > h2 {
+    margin-left: 50px;
   }
 }
