--- a/homepage.css
+++ b/homepage.css
@@ -7,59 +7,43 @@ html {
   margin: 0;
   padding: 0;
 }
-
-/* banner */
-
 .home__header--banner {
   position: relative;
   width: 100%;
 }
-
 .home__header--banner img {
   width: 100%;
   height: auto;
 }
-
-/* introduction */
-
 .home__header--introduction {
   margin-top: 100px;
   display: flex;
 }
-
 .introduction--1 {
   border: 1px solid white;
   padding: 30px;
 }
-
 .introduction--2 img {
   height: auto;
   width: 100%;
 }
-
 .introduction--header {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   margin-bottom: 24px;
 }
-
 .introduction--para {
   font-family: "Roboto", sans-serif;
 }
-
-/* service - album - space */
-
 .home__body--service,
 .home__body--album {
   margin-top: 50px;
 }
-
 .home__body--space {
   border: 1px solid white;
   margin: 50px 5px;
   padding: 20px 0px;
 }
-
 .body__header--1 {
   font-family: "Montserrat", sans-serif;
   font-size: 24px;
@@ -67,31 +51,26 @@ html {
   margin-bottom: 50px;
   text-align: center;
 }
-
 .body__service,
 .body__album,
 .body__space {
   display: flex;
 }
-
 .service__item,
 .space__item,
 .album__item {
   position: relative;
   text-align: center;
 }
-
 .service__item img,
 .album__item img,
 .space__item img {
   opacity: 80%;
   height: auto;
 }
-
 .space__item img {
   border-radius: 20px;
 }
-
 .album__item div,
 .space__item div,
 .service__item div {
@@ -102,7 +81,6 @@ html {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
 }
-
 .service__item input {
   border-radius: 5px;
   color: white;
@@ -111,151 +89,116 @@ html {
   text-align: center;
   cursor: pointer;
 }
-
 .body__space--more {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   margin-top: 30px;
 }
-
-.body__space--more a:visited {
+.body__space--more a {
   color: white;
 }
-
 .body__color {
   background-color: black;
   color: white;
 }
-
 @media only screen and (max-width: 600px) {
   .home__header--banner {
     top: 25px;
   }
-
   .introduction--header {
     font-size: 18px;
   }
-
   .introduction--1 {
     margin: 0px 20px;
   }
-
   .introduction--2 {
     display: none;
   }
-
   .album__item,
   .service__item,
   .space__item {
     margin-bottom: 16px;
   }
-
   .album__item div,
   .space__item div,
   .service__item div {
     font-size: 18px;
   }
-
   .service__item input {
     width: 140px;
-    height: 24px;
+    height: 35px;
     line-height: 24px;
   }
-
-  .body__service,
-  .body__space,
-  .body__album {
-    overflow: scroll;
-    overflow-y: hidden;
-    flex-wrap: nowrap;
-  }
-
   .service__item img,
   .album__item img,
   .space__item img {
     width: 400px;
     margin: 0px 20px;
   }
-
   .scrollbar {
     overflow-x: scroll;
   }
-
   #scrollbar--style::-webkit-scrollbar {
     width: 20px;
     height: 10px;
   }
-
   #scrollbar--style::-webkit-scrollbar-thumb {
     background: white;
     border-radius: 10px;
   }
 }
-
 @media only screen and (min-width: 600px) {
   .home__header--banner {
     top: 30px;
   }
-
   .introduction--header {
     font-size: 18px;
   }
-
   .home__header--introduction,
   .body__album,
   .body__service,
   .body__space {
     flex-wrap: wrap;
   }
-
   .introduction--1 {
     margin: 0px 40px;
   }
-
   .introduction--2 {
     display: none;
   }
-
   .body__service,
   .body__album,
   .body__space {
     overflow: hidden;
     justify-content: space-evenly;
   }
-
   .album__item img,
   .service__item img,
   .space__item img {
     width: 150px;
   }
-
   .album__item div,
   .space__item div,
   .service__item div {
     font-size: 7px;
   }
-
   .service__item input {
     width: 80px;
     height: 20px;
     line-height: 20px;
   }
-
   .album__item {
     margin: 0px 20px 20px 20px;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .home__header--banner {
     top: 40px;
   }
-
   .introduction--header {
     font-size: 18px;
   }
-
   .home__header--introduction,
   .body__album,
   .body__service,
@@ -263,149 +206,120 @@ html {
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
-
   .introduction--1 {
     margin: 0px 50px;
   }
-
   .introduction--2 {
     display: none;
   }
-
   .album__item img,
   .service__item img,
   .space__item img {
     width: 220px;
   }
-
   .album__item {
     margin: 15px;
   }
-
   .service__item input {
     width: 90px;
-    height: 20px;
+    height: 23px;
     line-height: 20px;
   }
-
   .album__item div,
   .space__item div,
   .service__item div {
     font-size: 10px;
   }
 }
-
 @media only screen and (min-width: 992px) {
   .home__header--banner {
     top: 45px;
   }
-
   .introduction--1 {
     margin: 0px 5px 0px 10px;
   }
-
   .introduction--2 {
     display: block;
     margin: 0px 10px 0px 5px;
   }
-
   .introduction--1,
   .introduction--2 {
     width: 45%;
   }
-
   .introduction--header {
     font-size: 14px;
   }
-
   .introduction--para {
     font-size: 12px;
   }
-
   .album__item img,
   .service__item img,
   .space__item img {
     width: 270px;
   }
-
   .album__item div,
   .space__item div,
   .service__item div {
     font-size: 12px;
   }
-
   .service__item input {
     width: 120px;
-    height: 22px;
+    height: 30px;
     line-height: 22px;
   }
-
   .body__service,
   .body__album,
   .body__space {
     justify-content: space-evenly;
   }
-
   .album__item {
     margin: 16px;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .home__header--banner {
     top: 50px;
   }
-
   .home__header--introduction {
     flex-wrap: nowrap;
   }
-
   .introduction--1 {
     margin: 0px 25px 0px 50px;
   }
-
   .introduction--2 {
     display: block;
     margin: 0px 50px 0px 25px;
   }
-
   .introduction--1,
   .introduction--2 {
     width: 90%;
   }
-
   .introduction--header {
     font-size: 20px;
   }
-
   .introduction--para {
     font-size: 14px;
   }
-
   .service__item img,
   .album__item img,
   .space__item img {
     width: 350px;
   }
-
   .album__item div,
   .space__item div,
   .service__item div {
     font-size: 15px;
   }
-
   .service__item input {
     width: 124px;
-    height: 24px;
+    height: 32px;
     line-height: 24px;
   }
-
   .body__service,
   .body__album,
   .body__space {
     justify-content: space-evenly;
   }
-
   .album__item {
     margin: 10px;
   }
