--- a/Style.css
+++ b/Style.css
@@ -11,7 +11,9 @@ html, body{
 .Page__Header--Container{
     background-color: #242426;
     width: 100%;
+    top: 0px;
     position: fixed;
+    z-index: 1;
 }
 .Page__Header--Container .header__button{
     display: none;
@@ -20,14 +22,14 @@ html, body{
     font-family: 'Racing Sans One', cursive;
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 21px;
 }
 .Page__Header--Login{
     color: white;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 20px;
 }
 .Page__Header--Title{
     color: white;
@@ -59,6 +61,7 @@ html, body{
 .Page__Header--Dropdown {
     float: left;
     overflow: hidden;
+    width: 12%;
 }
 .Page__Header--Dropdown .dropdown__button{    
     border: none;
@@ -67,15 +70,10 @@ html, body{
     padding: 14px 16px;
     background-color: #242426;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
+    margin: 0px;
 }
-
 .Page__Header--Dropdown:hover .dropdown__button{
-    background-color: black;
-    color: white;
-}
-.dropdown__content a:hover {
-    background-color: black;
+    background-color: #242426;
     color: white;
 }
 .Page__Header--Container a,.Page__Header--Container div:nth-of-type(2){
@@ -87,9 +85,14 @@ html, body{
   padding: 14px 16px;
   text-decoration: none;
 }
-.Page__Header--Container a:hover {
+.Page__Header--Container a:not(:nth-of-type(2)):hover, .Page__Header--Container a:not(:nth-of-type(6)):hover {
     background-color: white;
     color: black;
+    text-decoration: none;
+}
+.Page__Header--Container a:nth-of-type(2):hover, .Page__Header--Container a:nth-of-type(6):hover{
+    background-color: #242426;
+    color: white;
     text-decoration: none;
 }
 .dropdown__content{
@@ -97,12 +100,17 @@ html, body{
     position: absolute;
     background-color: white;
     min-width: 160px;
-    z-index: 1;
+    z-index: 2;
+}
+.dropdown__content a:nth-of-type(1):hover, .dropdown__content a:nth-of-type(2):hover,.dropdown__content a:nth-of-type(3):hover{
+    background-color: #242426;
+    color: white;
 }
 .dropdown__content a{
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     display: block;
     width: 100%;
     text-align: left;
@@ -113,7 +121,7 @@ html, body{
 .header__vertical  {
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     height: 100%;
     background-color: #242426;
     overflow-x: hidden;
@@ -122,13 +130,20 @@ html, body{
 }
 .header__vertical a {
     padding: 8px 8px 8px 32px;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: white;
     display: block;
     text-decoration: none;
 }
-.header__vertical a:hover{
+.header__vertical > a:not(:nth-of-type(1)):hover{
     text-decoration: none;
+    color: black;
+    background-color: white;
+}
+.header__vertical > a:nth-of-type(1):hover{
+    text-decoration: none;
+    color: white;
 }
 .header__vertical .closebtn {
     position: absolute;
@@ -139,7 +154,8 @@ html, body{
 .dropdown-btn {
     padding: 6px 8px 6px 32px;
     text-decoration: none;
-    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 19px;
     color: white;
     display: block;
     border: none;
@@ -148,12 +164,18 @@ html, body{
     text-align: left;
     outline: none;
 }
+.dropdown-btn:hover{
+    color: black;
+    background-color: white;
+}
 .dropdown-container {
     display: none;
     background-color: #242424;
     padding-left: 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 19px;
 }
-.dropdown-container:hover(){
+.dropdown-container a:hover{
     background-color: white;
     color: black;
     text-decoration: none;
@@ -248,13 +270,13 @@ html, body{
 }
 @media only screen and (max-width: 992px) {
     .Page__Header--Tach{
-        font-size: 18px;
+        font-size: 17px;
     }
     .header__button{
-        font-size: 18px;
+        font-size: 17px;
     }
     .Page__Header--Login{
-        font-size: 16px;
+        font-size: 17px;
     }
     .Page__Header--Container a{
         width: auto;
@@ -281,15 +303,15 @@ html, body{
         padding-right: 0;
     }
     .Page__Header--Tach{
-        font-size: 18px;
+        font-size: 19px;
     }
 
     .Page__Header--Title{
-        font-size: 16px;
+        font-size: 19px;
     }
 
     .Page__Header--Dropdown{
-        font-size: 16px;
+        font-size: 19px;
     }
 
     .Page__Header--Search{
@@ -297,7 +319,9 @@ html, body{
         font-size: 12px;
         width: 100%;
     }
-
+    .Page__Header--Login{
+        font-size: 19px;
+    }
     .Page__Header--Icon2{
         font-size: 13px;
         margin-right: -22px;
@@ -324,28 +348,6 @@ html, body{
     .Page__Header--Container a{
         padding-left: 0;
         padding-right: 0;
-    }
-    .Page__Header--Tach{
-        font-size: 20px;
-    }
-
-    .Page__Header--Title{
-        font-size: 18px;
-    }
-
-    .Page__Header--Dropdown{
-        font-size: 18px;
-    }
-
-    .Page__Header--Search{
-        padding: 4px 4px 4px 22px;
-        font-size: 14px;
-        width: 100%;
-    }
-
-    .Page__Header--Icon2{
-        font-size: 14px;
-        margin-right: -22px;
     }
     .Page__Header--Ava > img{
         width: 40px;
